[package]
name = "yamlette"
version = "0.0.8"
authors = ["dnsl48 <dnsl48@gmail.com>"]
# edition = "2018"

description = "Comprehensive and user friendly YAML 1.2 processor"
keywords = ["parser", "yaml", "json", "serialization"]
categories = ["config", "encoding", "parser-implementations"]

license = "MIT/Apache-2.0"

homepage = "https://github.com/dnsl48/yamlette.git"
repository = "https://github.com/dnsl48/yamlette.git"
documentation = "https://docs.rs/yamlette/"
readme = "README.md"

[dependencies]
skimmer = "0.0.2"
fraction = "0.6.1"
base91 = "0.0.1"
chrono = "0.4"

# [dependencies.fraction]
# path = "fraction"

[dependencies.num]
version = "0.2"
default-features = false
features = ["num-bigint", "std"]

[features]

dev = []
onetest = ["test_reader", "test_savant", "test_sage", "test_book", "test_orchestra", "test_face"]

test_reader = []
test_savant = []
test_sage = []
test_book = []
test_orchestra = []
test_face = []
