[package]
name = "yamlette"
version = "0.1.0"
authors = ["dnsl48 <dnsl48@gmail.com>"]
edition = "2021"

description = "Complete and comprehensive YAML 1.2 processor, written in pure rust"
keywords = ["parser", "yaml", "json", "serialization"]
categories = ["config", "encoding", "parser-implementations"]

license = "MIT/Apache-2.0"

homepage = "https://github.com/dnsl48/yamlette.git"
repository = "https://github.com/dnsl48/yamlette.git"
documentation = "https://docs.rs/yamlette/"
readme = "README.md"

[dependencies]
skimmer = "0.0.3"
fraction = "0.12"

[dependencies.num]
version = "0.4"
default-features = false
features = ["num-bigint", "std"]

[features]
